--- a/FullApp/client/css/style_register.css
+++ b/FullApp/client/css/style_register.css
@@ -17,7 +17,9 @@
     height: 480px;
     position: relative;
     margin: 6% auto;
-    background: rgb(255, 255, 255);
+    background-image: linear-gradient(rgba(0,0,0,1),rgba(0,0,0,1)),url(background1.jpg);
+    background-position: center;
+    background-size: cover;
     padding: 5px;
     overflow: hidden;
     border-radius: 25px;
