--- a/Restaurant_app/client/css/style_login.css
+++ b/Restaurant_app/client/css/style_login.css
@@ -17,7 +17,9 @@
     height: 480px;
     position: relative;
     margin: 6% auto;
-    background: rgb(255, 255, 255);
+    background-image: linear-gradient(rgba(255,0,0,0.4),rgba(255,255,0,0.4)),url(background1.png);
+    background-position: center;
+    background-size: cover;
     padding: 5px;
     overflow: hidden;
     border-radius: 25px;
@@ -26,7 +28,7 @@
 h1.login_page{
     text-align: center;
     margin: 35px auto;
-    background-image: linear-gradient(315deg, #10f7ff,#06ffac);
+    background-image: linear-gradient(75deg, #ff0022,#ff9900);
     color: white;
     font-family: Copperplate;
     position: relative;
@@ -79,12 +81,13 @@ h2.login_page{
     cursor: pointer;
     display: block;
     margin: auto;
-    background: linear-gradient(to right, #10f7ff,#06ffac);
-    border: 0;
+    background: linear-gradient(to right, #fff710,#ff2506);
+    border: 1;
     outline: none;
     border-radius: 30px;
     margin-top: 50px;
     float: right;
+    color: white;
 
 }
 
@@ -96,8 +99,8 @@ button.reserve_button{
     cursor: pointer;
     display: block;
     margin: auto;
-    background: linear-gradient(0deg, blue,#06ffac);
-    border: 0;
+    background: linear-gradient(0deg, crimson,gold);
+    border: 2;
     color: white;
     outline: none;
     border-radius: 30px;
