--- a/Restaurant_app/client/css/register_page.css
+++ b/Restaurant_app/client/css/register_page.css
@@ -20,33 +20,6 @@
     position: absolute;
 }
 
-.title_name{
-    color: #DD7230;
-    font-family: Baskerville,Times,'Times New Roman',serif;
-    font-size: 50px;
-    font-variant:small-caps;
-    line-height: 100px;
-    font-weight: bold;
-    margin-top: -10px;
-    text-align: center;
-    text-shadow: 0 1px 1px rgb(255, 255, 255);
-}
-
-.pic_col{
-    /* width: 700px;
-    height: 680px;
-    background-image: url(pic1.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
-    resize: both;
-    margin-top: 50;
-    margin-left: 100; */
-    float: left;
-    padding: 20px;
-    margin-left: 140px;
-    margin-top: 20px;
-}
-
 .btn-welcome{
     padding: 0;
     border: none;
@@ -197,24 +170,89 @@
     transform-origin: bottom left;
 }
 
-.buttons{
-    background:#1AAB8A;
+.title_name{
+    color: #DD7230;
+    font-family: Baskerville,Times,'Times New Roman',serif;
+    font-size: 50px;
+    font-variant:small-caps;
+    line-height: 100px;
+    font-weight: bold;
+    margin-top: -10px;
+    text-align: center;
+    text-shadow: 0 1px 1px rgb(255, 255, 255);
+}
+
+.form-a{
+    width: 800px;
+    height: 480px;
+    position: relative;
+    margin: 8% auto;
+    /* background-color: #8476ff; */
+    padding: 5px;
+    overflow: hidden;
+    border-radius: 25px;
+}
+
+label{
+    font-size: 20px;
+    margin-left: 150px;
+}
+
+input{
+    display: inline-block;
+    padding: 5px 10px;
+}
+
+.passN{
+    margin-left: 222px;
+}
+.userN{
+    margin-left: 150px;
+    margin-bottom: 20px;
+}
+.pass{
+    margin-left: 110px;
+}
+.firstN{
+    margin-left: 150px;
+    margin-bottom: 20px;
+}
+.mail{
+    width: 500px;
+    margin-left: 150px;
+    margin-bottom: 20px;
+}
+.bill{
+    width: 500px;
+    margin-left: 150px;
+    margin-bottom: 20px;
+}
+.pay{
+    width: 500px;
+    margin-left: 150px;
+    margin-bottom: 20px;
+}
+
+.submit-btn{
+    background:#DD7230;
     color:#fff;
     border:none;
     position:relative;
     height:35px;
-    font-size:20px;
-    padding:0 1.5em;
+    font-size:15px;
+    padding:0 110px;
     cursor:pointer;
     transition:800ms ease all;
     outline:none;
-    margin-left: 865px;
+    margin-left: 250px;
+    margin-top:50px;
+    display:block;
 }
-.buttons:hover{
+.submit-btn:hover{
     background:#fff;
     color:#DD7230;
 }
-.buttons:before,.buttons:after{
+.submit-btn:before,.submit-btn:after{
     content:'';
     position:absolute;
     top:0;
@@ -224,13 +262,14 @@
     background: #DD7230;
     transition:400ms ease all;
 }
-.buttons:after{
+.submit-btn:after{
     right:inherit;
     top:inherit;
     left:0;
     bottom:0;
 }
-.buttons:hover:before,.buttons:hover:after{
+.submit-btn:hover:before,.submit-btn:hover:after{
     width:100%;
     transition:800ms ease all;
 }
+
