--- a/Restaurant_app/client/css/rest_login.css
+++ b/Restaurant_app/client/css/rest_login.css
@@ -189,9 +189,6 @@ h1.title_name{
     position: relative;
     margin: 6% auto;
     margin-top: -15px;
-    /* background-image: linear-gradient(rgba(255,0,0,0.4),rgba(255,255,0,0.4)),url(background1.png);
-    background-position: center;
-    background-size: cover; */
     padding: 5px;
     overflow: hidden;
     border-radius: 25px;
@@ -216,6 +213,13 @@ h2.login_page{
     transition: .5s;
 }
 
+.inputs11{
+    text-align: center;
+    top: 170px;
+    width: 350px;
+    transition: .5s;
+}
+
 .inputs1{
     text-align: right;
     top: 400px;
@@ -226,6 +230,7 @@ h2.login_page{
 
 .regist{
     color:#DD7230;
+    text-align: right;
 }
 
 .input-field{
@@ -241,20 +246,31 @@ h2.login_page{
     margin-top:-10px;
 }
 
-/* .login{
-    width: 85%;
-    padding: 10px 30px;
-    cursor: pointer;
-    display: block;
-    margin: auto;
-    background: #DD7230;
-    border: none;
-    outline: none;
-    margin-top: 80px;
-    float: right;
-    color: white;
+.u_email{
+    margin-left: -280px;
+}
+.u_phone{
+    margin-left: -280px;
+}
+.u_mail{
+    margin-left: -235px;
+}
+.u_pay{
+    margin-left: -225px;
+}
 
-} */
+input{
+    margin-left: 10px;
+    margin-bottom: 15px;
+    padding: 5px;
+    width: 300px;
+}
+
+
+
+
+
+
 
 
 .login{
@@ -297,23 +313,6 @@ h2.login_page{
     transition:800ms ease all;
 }
 
-
-
-/* .reserve_button{
-    width: 85%;
-    font-size: 20;
-    font-family: Copperplate;
-    padding: 10px 30px;
-    cursor: pointer;
-    display: block;
-    margin: auto;
-    background: #DD7230;
-    border: none;
-    color: white;
-    outline: none;
-    margin-top: 50px;
-} */
-
 .reserv{
     background:#DD7230;
     color:#fff;
@@ -355,6 +354,48 @@ h2.login_page{
 }
 
 
+
+
+.log{
+    background:#DD7230;
+    color:#fff;
+    border:none;
+    position:relative;
+    height:35px;
+    /* width: 200px; */
+    font-size:15px;
+    padding:0 131px;
+    cursor:pointer;
+    transition:800ms ease all;
+    outline:none;
+    margin-left: 50px;
+    margin-top:70px;
+    display:block;
+}
+.log:hover{
+    background:#fff;
+    color:#DD7230;
+}
+.log:before,.log:after{
+    content:'';
+    position:absolute;
+    top:0;
+    right:0;
+    height:2px;
+    width:0;
+    background: #DD7230;
+    transition:400ms ease all;
+}
+.log:after{
+    right:inherit;
+    top:inherit;
+    left:0;
+    bottom:0;
+}
+.log:hover:before,.log:hover:after{
+    width:100%;
+    transition:800ms ease all;
+}
 
 
 
