--- a/Restaurant_app/client/css/rest_login.css
+++ b/Restaurant_app/client/css/rest_login.css
@@ -199,7 +199,7 @@ h2.login_page1{
     text-decoration: underline;
     /*margin: 10px auto;*/
     float: right;
-    margin-bottom: 20px;
+    margin-bottom: 10px;
     margin-right: 70px;
     color: #DD7230;
     font-family: Copperplate;
@@ -222,6 +222,18 @@ h2.login_page2{
     width: 80%;
 }
 
+h3.profile_page{
+    text-align: center;
+    /*margin: 10px auto;*/
+    margin-bottom: 20px;
+    margin-right: 70px;
+    color: #f1660f;
+    font-family: Copperplate;
+    position: relative;
+    border-radius: 25px;
+    width: 80%;
+}
+
 .inputs{
     text-align: center;
     top: 170px;
@@ -232,8 +244,8 @@ h2.login_page2{
 
 .inputs11{
     text-align: center;
-    margin-top: 70px;
-    top: 50px;
+    margin-top: 20px;
+    top: 60px;
     width: 350px;
     transition: .5s;
 }
