--- a/Restaurant_app/client/css/rest_login.css
+++ b/Restaurant_app/client/css/rest_login.css
@@ -302,7 +302,8 @@ h3.profile_page#points{
     border-bottom: 1px solid #999;
     outline: none;
     background: transparent;
-    margin-top:-10px;
+    margin-top: 10px;
+    margin-left: 50px;
 }
 
 .u_email{
@@ -344,7 +345,7 @@ input{
     transition:800ms ease all;
     outline:none;
     margin-left: 70px;
-    margin-top:70px;
+    margin-top:140px;
     display:block;
 }
 .login:hover{
