minor changes, added UI popup instead of alert

--- a/Restaurant_app/client/css/register_page.css
+++ b/Restaurant_app/client/css/register_page.css
@@ -521,3 +521,13 @@ input{
     width:100%;
     transition:800ms ease all;
 }
+
+
+
+.swal-modal {
+    border: 5px solid #DD7230;
+}
+
+.swal-footer {
+    text-align: center;
+}
