--- a/Restaurant_app/client/css/rest_login.css
+++ b/Restaurant_app/client/css/rest_login.css
@@ -603,3 +603,11 @@ hr.vertical {
     width:0;
     border:1px solid #DD7230;
 }
+
+.swal-modal {
+    border: 5px solid #DD7230;
+}
+
+.swal-footer {
+    text-align: center;
+}
